Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.

pkgcore trunk:

* Fix granular license filtering support via /etc/portage/package.license.

* Add `pinspect query get_profiles` support.

* Add support for COLLISION_IGNORE and UNINSTALL_IGNORE variables (see
  make.conf man page for details).

* Don't localize file system paths by resolving symlinks to provide a
  consistent view of merged files between pmerge output and the vdb.

* Add support for FEATURES=test-fail-continue. This allows the remaining
  phases after src_test to continue executing if the test phase fails.

* Deprecated pkgcore.chksum compatibility shim removed.

* Fix installing symlinks via doins for >= EAPI-4.

* Throw warnings for EAPI support in development instead of erroring out.

* Add eqawarn support.

* Add support for profile-defined PROFILE_ONLY_VARIABLES to prevent critical
  variables from being changed by the user in make.conf or the env.

* Move to using portage's keepdir file naming scheme (.keep_CAT_PN-SLOT)
  while still supporting pkgs using the previous ".keep" method.

* Support the portage-2 profile format.

* Define SLOT and USE for pkg_pretend (mirroring portage) so checking for
  enabled use flags during pkg_pretend works as expected.

* Apply use flags from make.defaults before package.use in profiles.

* Run pkg_nofetch phase when any files in SRC_URI fail to be fetched.

* Update pmerge's portage-like output to more closely approximate current
  portage releases.

* Add pmerge options -O and -n to match --nodeps and --noreplace similar
  to portage.

* Add profile-based package.accept_keywords, package.keywords, and
  package.unmask support and force the profile base to be loaded by default so
  related settings in the profile root dir are respected.

* Define ${T} for pkg_pretend phase, allows things like check-reqs for disk
  tempspace to work properly.
